Addressed comments from Code-Review-1. ConnectionLoss tests have been marked as ManualTests and they have been excluded from surefire.
Signed-off-by: Marco Carrer <marco.carrer@eurotech.com>